--- a/base_multi_company/i18n/pt_BR.po
+++ b/base_multi_company/i18n/pt_BR.po
@@ -25,7 +25,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:base_multi_company.field_res_partner_company_ids
 #: model:ir.model.fields,field_description:base_multi_company.field_sale_layout_category_company_ids
 msgid "Companies"
-msgstr ""
+msgstr "Empresas"
 
 #. module: base_multi_company
 #: model:ir.model.fields,field_description:base_multi_company.field_multi_company_abstract_company_id
@@ -37,7 +37,7 @@ msgstr "Empresa"
 #: model:ir.model.fields,field_description:base_multi_company.field_multi_company_abstract_display_name
 #: model:ir.model.fields,field_description:base_multi_company.field_res_company_assignment_display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nome"
 
 #. module: base_multi_company
 #: model:ir.model.fields,field_description:base_multi_company.field_multi_company_abstract_id
